--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -45,7 +45,7 @@
         </header>
         <!-- Get Started-->
         <section class="about-section bg-light" id="about">
-              <iframe src="assets/export/win_ratio.html"></iframe>
+              <iframe src="assets/export/map_view.html"></iframe>
         </section>
 
         <!-- Projects-->
