--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -18,9 +18,9 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-            
-            <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#page-top">{% include logo.svg %}</a>
+
+            <div class="container px-6 px-lg-10">
+                <a class="navbar-brand" href="#page-top">The best location for YOU to live</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -38,12 +38,15 @@
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5">{{site.description}}</h2>
+                        <h2 class="text-white-50 mx-auto mt-2 mb-5"><br> {{site.description}}
+                          <br></h2>
                         <a class="btn btn-primary" href="#about">Get Started</a>
+                        <br> <br>
                     </div>
                 </div>
             </div>
         </header>
+
         <!-- Get Started-->
         <section class="about-section bg-light" id="about">
               <iframe src="assets/export/map_view.html"></iframe>
@@ -57,7 +60,7 @@
 
                         <div class="featured-text text-align text-black">
                             <h3>Details</h3>
-                            <p> The best location to live is a tool that allows anyone to find their ideal residence place in a given city by specifying their personal level of importance for the location environmental parameters (noise,pollution...) and visual appeal. </p>
+                            <p> The best location for YOU to live is a tool that allows anyone to find their ideal residence place in a given city by specifying their personal level of importance for the location environmental parameters (noise,pollution...) and visual appeal. </p>
                             <p> The model is based on multiple layers of machine learning techniques applied to images of the city streets obtained with Google StreetView's API.</p>
                             <p> While environmental characteristics are strapped from multiple sources, the images appeal is derived from the results of a survey, in the form of a mini-battle between two images.</p>
                             <p> By means of an object recognition algorithm, a given view is associated to its vector of features containing the proportion of pixels taken by each object within the image. A regression analysis then allows to find what features are the most significant for users and to make a prediction of the most visually appealing neighborhood in another city for which no survey results are available. </p>
@@ -67,7 +70,7 @@
         <!-- Footer-->
         <footer class="footer bg-light small text-center text-black-50" id="signup" ><div class="container px-4 px-lg-5">
 
-          Copyright &copy; The best location to live 2021</div></footer>
+          Copyright &copy; The best location for YOU to live 2021</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
